Show gamemode and weight on dropdowns
